--- a/css/style.css
+++ b/css/style.css
@@ -1,163 +1,242 @@
-:root {
-    --header-color: linear-gradient(90deg, rgba(28, 54, 67, .85) 0, rgba(39, 59, 71, .85) 25%, rgba(30, 83, 114, .9));
-}
-* {
-    padding: 0;
+@import url('https://fonts.googleapis.com/css?family=Poppins: 200,300,400,500,600,700,800,900&display=swap');
+
+*{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 body{
-    font-family: 'Lato', sans-serif;
-    font-size: 16px;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
 }
-.bg-black{
-    background-color: black;
-}
-.Header{
-    position: fixed;
-    width: 100%;
-    height: 80px;
-    padding: 10px 30px;
-    background: var(--header-color);
-    display: grid;
-    grid-template-columns: auto 1fr;
-    color: #ffffff;
-    z-index: 1;
-}
-.logoHeader{
-    display: grid;
-    align-items: center;
-    grid-gap: 0px;
-}
-.logoHeader-container, .logoHeader-container img{
-    height: 60px;
-}
-.navHeader{
-    display: grid;
-    grid-template-columns: auto 1fr auto auto auto;
-    align-items: center;
-    justify-self: end;
-    margin-right: 50px;
-}
-.Menu{
-    list-style: none;
-    display: flex;
-    font-size: 17px;
-}
-.Menu-list{
-    padding: 0px 12px;
-    cursor: pointer;
-}
-.Sub-menu{
-    display: none;
-    position: absolute;
-    background-color: #fff;
-    color: #000000;
-    font-size: 16px;
-    /* margin-top: 10px; */
-}
-.SubMenu-list{
+.section-1{
     position: relative;
-    list-style: none;
-    padding: 10px 5px;
-    border-bottom: 1px solid #000000;
-}
-.Menu-list:hover .Sub-menu, .Sub-menu:hover{
-    display: block;
-}
-
-.slider{
-    display: flex;
-    height: 450px;
-}
-.slider-item{
-    position: absolute;
     width: 100%;
-}
-.inactive{
-    opacity: 0;
-    display: none;
-    transition: opacity 0.5s ease-in-out;
-}
-.active{
-    opacity: 1;
-    display: block;
-    transition: opacity 0.5s ease-in-out;
-}
-
-.image-cover{
-    background: linear-gradient(90deg,rgba(0,0,0,.7),rgba(0, 0, 0, .4)),url('../assets/grama-fut.jpg');
-    background-position: bottom;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    min-height: 450px;
-    -webkit-box-align: end;
-    -moz-box-align: end;
-    -o-box-align: end;
-    -ms-flex-align: end;
-    -webkit-align-items: flex-end;
-    align-items: center;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: box;
+    min-height: 100vh;
+    padding: 100px;
     display: flex;
-    color: #fff;
-    background-color: #1c3643;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-.circle-img{
-    background-color: #4d8429;
-    width: 290px;
-    height: 290px;
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    margin: 0px;
+    background: #2796b8;
+    transition: .5s;
 }
-.slider-buttons{
-    position: relative;
-}
-.slider-indicators{
+header{
     position: absolute;
-    right: 0;
-    bottom: 0;
+    top: 0;
     left: 0;
-    z-index: 15;
-    display: -ms-flexbox;
+    width: 100%;
+    padding: 20px 100px;
     display: flex;
-    -ms-flex-pack: center;
-    justify-content: center;
-    padding-left: 0;
-    margin-right: 15%;
-    margin-left: 15%;
+    justify-content: space-between;
+    align-items: center;
+}
+header .logo{
+    position: relative;
+    max-height: 80px;
+}
+header ul{
+    position: relative;
+    display: flex;
+}
+header ul li{
     list-style: none;
 }
-.slider-indicators li{
-    box-sizing: content-box;
-    -ms-flex: 0 1 auto;
-    flex: 0 1 auto;
-    width: 30px;
-    height: 3px;
-    margin-right: 3px;
-    margin-left: 3px;
-    text-indent: -999px;
+header ul li a{
+    display: inline-block;
+    color: #ffffff;
+    font-weight: 400;
+    margin-left: 40px;
+    text-decoration: none;
+}
+.content{
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.content .textBox{
+    position: relative;
+    max-width: 600px;
+}
+.content .textBox h2{
+    color: #fff;
+    font-size: 3.2em;
+    line-height: 1.5em;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+.content .textBox h2 span{
+    font-size: 2em;
+}
+.content .textBox p{
+    color: #fff;
+}
+.content .textBox a{
+    display: inline-block;
+    margin-top: 20px;
+    padding: 8px 20px;
+    background: #fff;
+    color: #111;
+    border-radius: 40px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+.content .imgBox{
+    width: 60px;
+    display: flex;
+    padding-right: 50px;
+    margin-top: 50px;
+    justify-content: flex-end;
+}
+.content .imgBox img{
+    max-width: 400px;
+}
+.content-thumb{
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    transform: translateX(-50%);
+    text-align: center;
+}
+.content-thumb span{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+}
+.thumb{
+    display: flex;
+}
+.thumb li{
+    /* these styles are for in case of text  */
+    color: #fff;
+    font-size: 1.2em;
+
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
     cursor: pointer;
-    background-color: #fff;
-    background-clip: padding-box;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    opacity: .5;
-    transition: opacity .6s ease;
+    transition: .5s;
 }
-.slider-indicators li.active{
-    opacity: 1;
+.thumb li.active{
+    transform: translateY(-15px);
 }
+.thumb li:hover{
+    transform: translateY(-15px);
+}
+.thumb li img{
+    max-width: 120px;
+    height: 50px;
+}
+.sci{
+    position: relative;
+    top: 50%;
+    right: 30px;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.sci li{
+    list-style: none;
+}
+.sci li a{
+    display: inline-block;
+    filter: invert(1);
+    margin: 5px 0;
+    transform: scale(0.6);
+}
+
+
+
+
+
+
+
+.goodbye-left{
+    -webkit-animation: slide-out-left 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	animation: slide-out-left 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
+.goodbye-right {
+    -webkit-animation: slide-out-right 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+    animation: slide-out-right 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
+.hello{
+    -webkit-animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+@-webkit-keyframes slide-out-left {
+    0% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: translateX(-1000px);
+              transform: translateX(-1000px);
+      opacity: 0;
+    }
+}
+@keyframes slide-out-left {
+    0% {
+        -webkit-transform: translateX(0);
+                transform: translateX(0);
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: translateX(-1000px);
+                transform: translateX(-1000px);
+        opacity: 0;
+    }
+}
+@-webkit-keyframes slide-out-right {
+    0% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: translateX(1000px);
+              transform: translateX(1000px);
+      opacity: 0;
+    }
+}
+@keyframes slide-out-right {
+    0% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: translateX(1000px);
+              transform: translateX(1000px);
+      opacity: 0;
+    }
+}
+@-webkit-keyframes scale-in-center {
+    0% {
+      -webkit-transform: scale(0);
+              transform: scale(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      opacity: 1;
+    }
+  }
+  @keyframes scale-in-center {
+    0% {
+      -webkit-transform: scale(0);
+              transform: scale(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      opacity: 1;
+    }
+  }
