--- a/css/style2.css
+++ b/css/style2.css
@@ -48,16 +48,14 @@ header ul li a{
     background-position: right;
     background-size: cover;
 
-    border-radius: 40px;
+    border-radius: 0px 0px 40px 40px;
     display: flex;
     justify-content: space-between;
     overflow: hidden;
     position: relative;
-    width: 80%;
-    height: 75vh;
-    /*box-shadow: 13px 8px 13px 4px #333;*/
-    margin: auto;
-    top: 120px;
+    width: 100%;
+    height: 90vh;
+    box-shadow: 14px 9px 14px 3px #333;
 }
 .diagonal{
     width: 50%;
@@ -71,7 +69,7 @@ header ul li a{
     left: 0;
     width: 100%;
     height: calc(100% + 100px);
-    clip-path: polygon(0 0, 80% 0, 90% 28%, 61% 100%, 0 100%);
+    clip-path: polygon(0 0, 80% 0, 90% 28%, 65% 100%, 0 100%);
     background-color: #ffffff;
     z-index: 1;
 }
