--- a/css/style2.css
+++ b/css/style2.css
@@ -56,6 +56,15 @@ header ul li a{
     width: 100%;
     height: 90vh;
     box-shadow: 14px 9px 14px 3px #333;
+    animation: card-3d 2s linear;
+}
+@keyframes card-3d{
+    0%{
+        transform: rotate3d(0, 0, 0, 0deg);
+    }
+    100%{
+        transform: rotate3d(2, -1, 0, 25deg);
+    }
 }
 .diagonal{
     width: 50%;
