--- a/css/style2.css
+++ b/css/style2.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins: 200,300,400,500,600,700,800,900&display=swap');
 :root {
-    --header-color: linear-gradient(90deg, rgba(28, 54, 67, .85) 0, rgba(39, 59, 71, .85) 25%, rgba(30, 83, 114, .9));
+    --header-color: linear-gradient(90deg, rgb(28, 54, 67) 0, rgb(39, 59, 71) 25%, rgb(30, 83, 114));
+    --header-color-transparent: linear-gradient(90deg, rgba(28, 54, 67, .85) 0, rgba(39, 59, 71, .85) 25%, rgba(30, 83, 114, .9));
 }
 *{
     margin: 0;
@@ -13,20 +14,24 @@ body{
     overflow-x: hidden;
 }
 header{
-    background: var(--header-color);
+    background: var(--header-color-transparent);
     position: fixed;
     top: 0;
     left: 0;
     z-index: 10;
     width: 100%;
-    padding: 20px 100px;
+    padding: 10px 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+header a{
+    display: flex;
+    align-items: center;
+}
 header .logo{
     position: relative;
-    max-height: 60px;
+    max-height: 50px;
 }
 header ul{
     position: relative;
@@ -42,13 +47,13 @@ header ul li a{
     margin-left: 40px;
     text-decoration: none;
 }
-.section{
+.cards{
     background: linear-gradient(-15deg,rgba(0,0,0,.6),rgba(0, 0, 0, .1)),url('../assets/cancha.jpg');
     background-repeat: no-repeat;
     background-position: right;
     background-size: cover;
 
-    border-radius: 0px 0px 40px 40px;
+    /*border-radius: 0px 0px 40px 40px;*/
     display: flex;
     justify-content: space-between;
     overflow: hidden;
@@ -56,14 +61,34 @@ header ul li a{
     width: 100%;
     height: 90vh;
     box-shadow: 14px 9px 14px 3px #333;
-    animation: card-3d 2s linear;
+}
+.zoom-left{
+    animation: zoom 3s linear;
 }
 @keyframes card-3d{
     0%{
         transform: rotate3d(0, 0, 0, 0deg);
     }
+    40%{
+        transform: rotate3d(2, -1, 0, 25deg) translateX(0);
+    }
     100%{
-        transform: rotate3d(2, -1, 0, 25deg);
+        transform: translateX(-900px);
+    }
+}
+@keyframes zoom{
+    0%{
+        transform: rotate3d(0, 0, 0, 0deg) scale(1);
+        border-radius: 0;
+    }
+    40%{
+        transform: rotate3d(2, -1, 0, -25deg) scale(.7) translateX(0);
+    }
+    80%{
+        border-radius: 60px;
+    }
+    100%{
+        transform: translateX(-9000px);
     }
 }
 .diagonal{
@@ -91,6 +116,107 @@ header ul li a{
     height: 100%;
     padding: 20px;
 }
+.content-image{
+    margin: auto;
+    animation: rotation 3s infinite linear;
+}
+@keyframes rotation{
+    0%{
+        transform: rotateZ(0);
+    }
+    100%{
+        transform: rotateZ(360deg);
+    }
+}
 .content-info-title{
     text-align: center;
+    font-size: 40px;
+}
+.content-info p{
+    margin-bottom: 10px;
+}
+.content-info a{
+    background: #333;
+    color: #ffffff;
+    border-radius: 30px;
+    padding: 8px 20px;
+    margin: auto;
+    text-decoration: none;
+}
+.icons-bar{
+    position: relative;
+    width: 100%;
+    padding: 0px 90px;
+    z-index: 6;
+    transform: translateY(-25px);
+}
+.icons-bar-content{
+    height: 95px;
+    background: var(--header-color);
+    border-radius: 15px;
+}
+.icons-bar-content ul{
+    width: 85%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: auto;
+    overflow: hidden;
+}
+.icons-bar-content ul::before{
+    content: "<";
+    left: 130px;
+}
+.icons-bar-content ul::after{
+    content: ">";
+    right: 130px;
+}
+.icons-bar-content ul::after, .icons-bar-content ul::before{
+    position: absolute;
+    color: #ffffff;
+    font-size: 40px;
+    cursor: pointer;
+}
+.icons-bar-content ul div{
+    padding: 0 10px;
+}
+.icons-bar-content ul li{
+    list-style: none;
+    padding: 0 20px;
+    transition: .5s;
+}
+.icons-bar-content ul li:hover{
+    transform: translateY(-10px);
+}
+.icons-bar-content ul li.active{
+    transition: .5s;
+    transform: translateY(-10px);
+}
+.icons-bar-content ul li a{
+    color: #ffffff;
+    text-decoration: none;
+    display: grid;
+}
+.icons-bar-content ul li a i{
+    font-size: 28px;
+    margin: auto;
+}
+.icons-bar-content ul li a span{
+    font-size: 14px;
+    margin-top: 5px;
+}
+
+
+
+
+
+.d-none{
+    display: none;
+}
+.d-flex{
+    display: flex;
+}
+.m-auto{
+    margin: auto;
 }
