--- a/css/style2.css
+++ b/css/style2.css
@@ -10,7 +10,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-body{
+html body{
     background-color: #ececec;
     overflow-x: hidden;
 }
@@ -67,6 +67,9 @@ header ul li a{
 .zoom-left{
     animation: zoom 3s linear;
 }
+.zoom-right{
+    animation: zoom-r 2s linear;
+}
 @keyframes card-3d{
     0%{
         transform: rotate3d(0, 0, 0, 0deg);
@@ -93,6 +96,22 @@ header ul li a{
         transform: translateX(-9000px);
     }
 }
+@keyframes zoom-r{
+    0%{
+        transform: rotate3d(2, -1, 0, -25deg) scale(.7) translateX(9000px);
+        border-radius: 60px;
+    }
+    40%{
+        transform: scale(.7) translateX(0);
+    }
+    80%{
+        transform: scale(1) translateX(0);
+        border-radius: 0px;
+    }
+    100%{
+        transform: rotate3d(0, 0, 0, 0deg);
+    }
+}
 .diagonal{
     width: 50%;
     position: relative;
@@ -112,7 +131,7 @@ header ul li a{
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #058c3b;/* blue: 0375b4, green: 007849, green-electric: 3cc47c, other-green-select: 058c3b*/  
+    background: #0d9041;/* blue: 0375b4, green: 007849, green-electric: 3cc47c, other-green-select: 0d9041 || 058c3b*/  
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
     clip-path: polygon(0 0, 80% 0, 90% 28%, 65% 100%, 0 100%);
 }
@@ -355,10 +374,9 @@ header ul li a{
     margin-top: 5px;
 }
 
-
-
+  
 .testimonial-container{
-    width: 1200px;
+    width: 100%;
     display: grid;
     margin: 0 auto;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
@@ -418,9 +436,9 @@ header ul li a{
     position: absolute;
     top: 20px;
     right: 40px;
-    width: 80px;
+    width: 100px;
     height: 80px;
-    background: url(quotes.png);
+    background: url('../assets/quotes.svg');
     background-size: cover;
     opacity: .05;
     pointer-events: none;
@@ -435,9 +453,9 @@ header ul li a{
     position: absolute;
     bottom: 20px;
     left: 40px;
-    width: 80px;
+    width: 100px;
     height: 80px;
-    background: url(quotes.png);
+    background: url('../assets/quotes.svg');
     background-size: cover;
     opacity: .05;
     pointer-events: none;
@@ -451,6 +469,206 @@ header ul li a{
 
 
 
+.contact{
+    position: relative;
+    min-height: 100vh;
+    padding: 50px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: linear-gradient(rgba(0,0,0,.6),rgba(0, 0, 0, .6)), url('../assets/bg-cancha.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+}
+.contact .contact-content{
+    max-width: 800px;
+    text-align: center;
+}
+.contact .contact-content h2{
+    font-size: 36px;
+    font-weight: 500;
+    color: #fff;
+}
+.contact .contact-content p{
+    font-weight: 300;
+    color: #fff;
+}
+.container-contact{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+.container-contact .contactInfo{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+.container-contact .contactInfo .box{
+    position: relative;
+    padding: 20px 0;
+    display: flex;
+}
+.container-contact .contactInfo .box .icon{
+    min-width: 60px;
+    height: 60px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 22px;
+}
+.container-contact .contactInfo .box .text{
+    display: flex;
+    margin-left: 20px;
+    font-size: 16px;
+    color: #fff;
+    flex-direction: column;
+    font-weight: 300;
+}
+.container-contact .contactInfo .box .text h3{
+    font-weight: 500;
+    color: var(--logo-color-green);
+}
+.contactForm{
+    width: 40%;
+    padding: 40px;
+    background: #fff;
+}
+.contactForm h2{
+    font-size: 30px;
+    color: #333;
+    font-weight: 500;
+}
+.contactForm .inputBox{
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+}
+.contactForm .inputBox input, .contactForm .inputBox textarea{
+    width: 100%;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    border: none;
+    border-bottom: 2px solid #333;
+    outline: none;
+    resize: none;
+}
+.contactForm .inputBox span{
+    position: absolute;
+    left: 0;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    pointer-events: none;
+    transition: .5s;
+    color: #666;
+}
+.contactForm .inputBox input:focus ~ span,
+.contactForm .inputBox input:valid ~ span,
+.contactForm .inputBox textarea:focus ~ span,
+.contactForm .inputBox textarea:valid ~ span{
+    color: #e91e63;
+    font-size: 12px;
+    transform: translateY(-20px);
+}
+.contactForm .inputBox input[type="submit"]{
+    width: 100%;
+    background: var(--header-color);
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 18px;
+}
+
+
+
+
+
+
+
+footer{
+    background-color: #ececec;
+    line-height: 24px;
+    color: white;
+}
+footer .art{
+    background: var(--header-color);
+    padding: 16px;
+    padding-top: 48px;
+    clip-path: polygon(0% 5%, 15% 0%, 100% 10%, 100% 100%, 0% 100%);
+}
+footer .art .cont{
+    max-width: 1080px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 16px;
+}
+footer h2{
+    font-size: 21px;
+    padding-block: 16px;
+}
+footer .art .cont a{
+    display: block;
+    padding-block: 12px;
+    color: #fff;
+    opacity: .65;
+}
+footer .art .cont a:hover{
+    opacity: 1;
+    color: black;
+    font-size: 18px;
+}
+footer input{
+    border-style: solid;
+    line-height: 24px;
+    padding: 12px 16px;
+    font-size: 1rem;
+    width: 100%;
+    margin-block: 8px;
+    border-radius: 8px;
+    border-width: 2px;
+}
+footer input[type="email"]{
+    background-color: transparent;
+    border-color: #fff;
+    color: #fff;
+}
+footer input[type="email"]:hover,
+footer input[type="email"]:focus{
+    border-color: var(--logo-color-green);
+    color: var(--logo-color-green);
+}
+footer input[type="submit"]{
+    background-color: #fff;
+    color: var(--header-color);
+    text-transform: uppercase;
+    border: none;
+}
+footer input[type="submit"]:hover{
+    background: var(--logo-color-green);
+}
+footer .social{
+    margin-block: 16px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 16px;
+}
+footer .social i{
+    font-size: 32px;
+    padding: 12px;
+    text-align: center;
+    border: 1px solid var(--logo-color-green);
+    border-radius: 8px;
+    width: 100%;
+}
+
 
 
 
@@ -460,6 +678,12 @@ header ul li a{
 .d-flex{
     display: flex;
 }
+.d-grid{
+    display: grid;
+}
 .m-auto{
     margin: auto;
+}
+.bg-white{
+    background: white;
 }
